@@ -1,16 +1,15 @@
 package com.movieglass.backend.domain.home.service;
 
 import com.movieglass.backend.domain.curation.repository.CurationRepository;
+import com.movieglass.backend.domain.home.dto.CurationMoviesDto;
 import com.movieglass.backend.domain.movie.repository.MovieRepository;
 import com.movieglass.backend.domain.home.dto.HomeResponseDto;
 import com.movieglass.backend.domain.movie.entity.Movie;
-import com.movieglass.backend.domain.curation.entity.Curation;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
 import java.util.Objects;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -23,24 +22,30 @@ public class HomeServiceImpl implements HomeService {
     public HomeResponseDto getHomeData(String userId) {
         // TODO: 추천 로직이 확정되면 recommendation 테이블을 활용하도록 변경
         List<Movie> top10Movies = List.of(
-                movieRepository.findById("KMDb001").orElse(null),
-                movieRepository.findById("KMDb002").orElse(null),
-                movieRepository.findById("KMDb003").orElse(null),
-                movieRepository.findById("KMDb004").orElse(null),
-                movieRepository.findById("KMDb005").orElse(null),
-                movieRepository.findById("KMDb006").orElse(null),
-                movieRepository.findById("KMDb007").orElse(null),
-                movieRepository.findById("KMDb008").orElse(null),
-                movieRepository.findById("KMDb009").orElse(null),
-                movieRepository.findById("KMDb010").orElse(null)
-        ).stream().filter(Objects::nonNull).collect(Collectors.toList());
+                movieRepository.findById(1L).orElse(null),
+                movieRepository.findById(2L).orElse(null),
+                movieRepository.findById(3L).orElse(null),
+                movieRepository.findById(4L).orElse(null),
+                movieRepository.findById(5L).orElse(null),
+                movieRepository.findById(6L).orElse(null),
+                movieRepository.findById(7L).orElse(null),
+                movieRepository.findById(8L).orElse(null),
+                movieRepository.findById(9L).orElse(null),
+                movieRepository.findById(10L).orElse(null)
+        ).stream().filter(Objects::nonNull).toList();
 
-        // 날씨 큐레이션 조회 (description 기반으로 검색)
-        List<Curation> weatherCurations = curationRepository.findByDescription("weather");
+        // 날씨 큐레이션 조회
+        List<CurationMoviesDto> weatherCurations = curationRepository.findByDescription("weather").stream() // TODO: 날씨 정보를 받아서 조회하도록 변경
+                .map(CurationMoviesDto::from)
+                .toList();
 
         // 기타 큐레이션 조회
-        List<Curation> otherCurations = curationRepository.findByDescription("other");
+        List<CurationMoviesDto> otherCurations = curationRepository.findByDescription("other").stream() // TODO : 사용자 맞춤 큐레이션 조회
+                .map(CurationMoviesDto::from)
+                .toList();
 
         return HomeResponseDto.of(top10Movies, weatherCurations, otherCurations);
     }
+
 }
+
